[package]
name = "firewall-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.1", features = ["rt", "macros", "rt-multi-thread", "tokio-macros"] }
tokio-util = "0.7.1"

actix-web = { version = "4.0.1" }
mime = "0.3.16"

redis = "0.21.5"

bb8 = "0.8.0"
bb8-redis = "0.11.0"

futures-util = "0.3.21"

serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
erased-serde = "0.3.20"

slog = { version = "2.7.0", features = ["nested-values"] }
slog-extlog-derive = "8.0.0"

pepe-config = "0.0.2"

config = "0.12.0"

thiserror = "1.0.31"

async-trait = "0.1.53"
num-traits = "0.2.15"

tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.3"
tracing-actix-web = "0.5"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.17.2"

[[bin]]
name = "executor"
path = "src/main.rs"

[lib]
name = "firewall_executor"
path = "src/lib.rs"
